Fix map overlap with menu on mobile

--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -53,6 +53,7 @@
 .mapa {
     height: 100%;
     width: 100%;
+    z-index: 0;
 }
 
 .listalogos {
